attempting fix for mobile background covers

--- a/style.css
+++ b/style.css
@@ -174,21 +174,6 @@ footer h3{
 	right: 0;
 }
 
-.cover-img body:after{
-      content:"";
-      position:fixed; /* stretch a fixed position to the whole screen */
-      top:0;
-      height:100vh; /* fix for mobile browser address bar appearing disappearing */
-      left:0;
-      right:0;
-      z-index:-1; /* needed to keep in the background */
-      background: url(img/work.jpg) center center;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-}
-
 @media (max-width: 768px) {
 	.landing-text h1 {
 		font-size: 600%;
